fix(community-index): 1800-avt1-community-index-downshift-label

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -20,6 +20,7 @@
 
 .component-index-search .bx--search-input {
   border-bottom: 1px solid $ui-03;
+  height: 2.5rem;
 }
 
 // Sort
@@ -30,12 +31,14 @@
 
 .component-index-sort {
   background-color: $white-0;
-  height: $spacing-09;
+  height: 2.5rem;
+  padding-left: 1rem;
 }
 
 .component-index-sort .bx--list-box__field {
   background-color: $white-0;
-  height: $spacing-09;
+  padding-left: 0.5rem;
+  height: 2.5rem;
 }
 
 //----------------------------------------------------------------------------
